--- a/streaming.css
+++ b/streaming.css
@@ -1,5 +1,3 @@
-
-
 * {
   box-sizing: border-box;
 }
@@ -32,16 +30,7 @@ body
     width: 110px;
   }
   
-  .img-container::after {
-    content: '';
-    border-radius: 50%;
-    position: absolute;
-    bottom: 100%;
-    left: 50%;
-    width: 20px;
-    height: 20px;
-    transform: translate(-50%, 50%);
-  }
+ 
   
   .img-container img {
     border-radius: 50%;
@@ -82,7 +71,7 @@ body
     border: 0;
     color: #ff00dd;
     font-size: 20px;
-    cursor: pointer;
+    cursor: progress;
     padding: 10px;
     margin: 0 20px;
   }
@@ -120,7 +109,7 @@ body
   }
   
   .progress-container {
-    background: #fff;
+    background: #f9ffa8;
     border-radius: 2px;
     cursor: pointer;
     margin: 10px 0;
