--- a/streaming.css
+++ b/streaming.css
@@ -4,10 +4,10 @@
 body 
 
 {
-  background-color: #ffd900;
-  font-family: arial;
+  background-color: #ffe550;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: small;
-  color:#ffd900;
+  color:#ffe550;
 
   display: flex;
   flex-direction: column;
