--- a/streaming.css
+++ b/streaming.css
@@ -125,5 +125,32 @@ body
     width: 0%;
     transition: width 0.1s linear;
   }
+h3 {margin: 0;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+min height 100vh
+display grid;
+place-content: center;
+text-align: center;
+background: var (--bg-color);
+;}
+  h3::before,
+  h3::after {
+      content: "aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.  aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.  aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. ";
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      
+  }
 
-  
+  h3::before{
+   
+      animation: typewriter 555s ease forwards;
+  }
+
+  @keyframes typewriter {
+      to {
+          left: 100%
+      }
+  }
