--- a/streaming.css
+++ b/streaming.css
@@ -4,9 +4,10 @@
 body 
 
 {
+    
   background-color: #ffe550;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: small;
+  font-size: large;
   color:#ffe550;
 
   display: flex;
@@ -17,9 +18,9 @@ body
 .music-container {
    
     border-radius: 15px;
-    box-shadow: 0 1px 1px 0 #ffd400;
+    box-shadow: 0 1px 1px 0 #ff006a;
     display: flex;
-    padding: 20px 30px;
+    padding: 20px 20px;
     position: relative;
     margin: 100px 0;
     z-index: 10;
@@ -68,9 +69,9 @@ body
   }
   
   .action-btn {
-    background-color:#ffe500;
+    background-color:#f1ff2f00;
     border: 0;
-    color: #ff00dd;
+    color: #ffffff50;
     font-size: 20px;
     cursor: progress;
     padding: 10px;
@@ -78,8 +79,9 @@ body
   }
   
   .action-btn.action-btn-big {
-    color: #c800ff;
-    font-size: 30px;
+    color: #ffffff80;
+    
+    font-size: 20px;
   }
   
   .action-btn:focus {
@@ -87,10 +89,11 @@ body
   }
   
   .music-info {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0);
     border-radius: 5px 5px 0 0;
     position: absolute;
     top: 0;
+   
     left: 20px;
     width: calc(100% - 40px);
     padding: 10px 10px 10px 150px;
@@ -98,6 +101,7 @@ body
     transform: translateY(0%);
     transition: transform 0.3s ease-in, opacity 1s ease-in;
     z-index: 0;
+    color:#fff27b
   }
   
   .music-container.play .music-info {
@@ -110,7 +114,7 @@ body
   }
   
   .progress-container {
-    background: #f9ffa8;
+    background: #3cffdf;
     border-radius: 2px;
     cursor: pointer;
     margin: 10px 0;
@@ -119,7 +123,7 @@ body
   }
   
   .progress {
-    background-color: #ffe500;
+    background-color: #fffd7a;
     border-radius: 5px;
     height: 100%;
     width: 0%;
@@ -135,22 +139,22 @@ background: var (--bg-color);
 ;}
   h3::before,
   h3::after {
-      content: "aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.  aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.  aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. ";
+      content: "aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceeealiceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee.  aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. aliceee. ";
       position: absolute;
       top: 0;
       right: 0;
       bottom: 0;
       left: 0;
-      
+      animation: infinite;
   }
 
   h3::before{
-   
-      animation: typewriter 555s ease forwards;
+      background: rgba(0, 128, 128, 0);
+      animation: typewriter 10s ease-in-out infinite;
   }
 
   @keyframes typewriter {
       to {
-          left: 100%
+          left: 2%
       }
   }
