--- a/streaming.css
+++ b/streaming.css
@@ -4,12 +4,13 @@
 body 
 
 {
-    
+
+  
   background-color: #ffe550;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: large;
   color:#ffe550;
-
+  cursor: url(images/pointer.png),auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,6 +25,7 @@ body
     position: relative;
     margin: 500px 0;
     z-index: 10;
+   
   }
   
   .img-container {
@@ -41,8 +43,8 @@ body
     position: absolute;
     bottom: 0;
     left: 0;
-    animation: rotate 10s linear infinite;
-  
+    animation: rotate 1s alternate infinite;
+    cursor: url(images/pointeryellow.png),auto;
     animation-play-state: paused;
   }
   
@@ -59,6 +61,8 @@ body
       transform: rotate(360deg);
     }
   }
+
+  
   
   
   .navigation {
