--- a/streaming.css
+++ b/streaming.css
@@ -33,6 +33,8 @@ body
 }
 
 
+
+
 .music-container {
    
     border-radius: 0px;
@@ -51,20 +53,29 @@ body
     
   }
   
- 
+  #title {
+top: 0;
+    font-size: 300px;
+    color: rgba(255, 243, 79, 0.616);
+    position: fixed;
+  }
+
+
+
   .playlist{
     list-style: none;
 
-  
-
-   
+ 
 }
+
 .playlist li a{
     color:rgb(0, 195, 255);
     text-decoration: none;
     cursor: url(images/pointeryellow.png),auto;
-
+  
 }
+
+
 .playlist .current-song a{
     color:rgb(255, 255, 255);
     cursor: url(images/pointeryellow.png),auto;
@@ -108,6 +119,7 @@ body
     align-items: center;
     justify-content: center;
     z-index: 1;
+   
   }
   
   .action-btn {
@@ -153,6 +165,8 @@ body
     transform: translateY(-100%);
   }
   
+.playlist.action-btn
+
   .music-info h4 {
     margin: 0;
   }
@@ -164,6 +178,7 @@ body
     margin: 10px 0;
     height: 4px;
     width: 100%;
+    cursor: url(images/pointerblue.png),auto;
   }
   
   .progress {
@@ -172,6 +187,7 @@ body
     height: 100%;
     width: 0%;
     transition: width 0.1s linear;
+    
   }
 h3 {margin: 0;
 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
