--- a/streaming.css
+++ b/streaming.css
@@ -56,7 +56,7 @@ body
   #title {
 top: 0;
     font-size: 300px;
-    color: rgba(255, 243, 79, 0.616);
+    color: rgb(255, 243, 79);
     position: fixed;
   }
 
